tests/baselines/reference/subtypingWithNumericIndexer2.errors.txt
==== tests/cases/conformance/types/typeRelationships/subtypesAndSuperTypes/subtypingWithNumericIndexer2.ts (5 errors) ====
    // Derived type indexer must be subtype of base type indexer
    
    interface Base { foo: string; }
    interface Derived extends Base { bar: string; }
    interface Derived2 extends Derived { baz: string; }
    
    interface A {
        [x: number]: Derived;
    }
    
    interface B extends A {
              ~
!!! error TS2429: Interface 'B' incorrectly extends interface 'A':
!!! error TS2429:   Index signatures are incompatible:
!!! error TS2429:     Type 'Base' is not assignable to type 'Derived':
!!! error TS2429:       Property 'bar' is missing in type 'Base'.
        [x: number]: Base; // error
    }
    
    interface B2 extends A {
        [x: number]: Derived2; // ok
    }
    
    module Generics {
        interface A<T extends Derived> {
            [x: number]: T;
        }
    
        interface B extends A<Base> {
                            ~~~~~~~
!!! error TS2343: Type 'Base' does not satisfy the constraint 'Derived':
!!! error TS2343:   Property 'bar' is missing in type 'Base'.
            [x: number]: Derived; // error
        }
    
        interface B2 extends A<Derived> {
            [x: number]: Derived2; // ok
        }
    
        interface B3<T extends Derived> extends A<T> {
                  ~~
!!! error TS2429: Interface 'B3<T>' incorrectly extends interface 'A<T>':
!!! error TS2429:   Index signatures are incompatible:
!!! error TS2429:     Type 'Base' is not assignable to type 'T'.
            [x: number]: Base; // error
        }
    
        interface B4<T extends Derived> extends A<T> {
                  ~~
!!! error TS2429: Interface 'B4<T>' incorrectly extends interface 'A<T>':
!!! error TS2429:   Index signatures are incompatible:
!!! error TS2429:     Type 'Derived' is not assignable to type 'T'.
            [x: number]: Derived; // error
        }
    
        interface B5<T extends Derived2> extends A<T> {
                  ~~
!!! error TS2429: Interface 'B5<T>' incorrectly extends interface 'A<T>':
!!! error TS2429:   Index signatures are incompatible:
!!! error TS2429:     Type 'Derived2' is not assignable to type 'T'.
            [x: number]: Derived2; // error
        }
    }